Added some pictures. Work with header.

--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -19,70 +19,71 @@
     <!--START header-->
     <header class="mainHeader">
 
-        <!--START mobile-menu-->
-        <div class="wrapMobileMenu">
-            <nav id="dl-menu" class="dl-menuwrapper mobileMenu">
-                <button class="dl-trigger">Open Menu</button>
-                <ul class="dl-menu">
-                    <li class="mobileMenuItem">
-                        <a href="#" class="mobileMenuLink">О магазине</a>
-                    </li>
-                    <li class="mobileMenuItem">
-                        <a href="#" class="mobileMenuLink">Бренды</a>
-                    </li>
-                    <li class="mobileMenuItem">
-                        <a href="#" class="mobileMenuLink">Как сдалать заказ</a>
-                    </li>
-                    <li class="mobileMenuItem">
-                        <a href="#" class="mobileMenuLink">Доставка</a>
-                    </li>
-                    <li class="mobileMenuItem">
-                        <a href="#" class="mobileMenuLink">Оплата</a>
-                    </li>
-                    <li class="mobileMenuItem">
-                        <a href="#" class="mobileMenuLink">Дисконтная система</a>
-                    </li>
-                    <li class="mobileMenuItem">
-                        <a href="#" class="mobileMenuLink">Статьи</a>
-                    </li>
-                    <li class="mobileMenuItem">
-                        <a href="#" class="mobileMenuLink">Контакты</a>
-                    </li>
-                    <li class="mobileMenuItem">
-                        <a href="#" class="mobileMenuLink">Категории</a>
-                        <ul class="dl-submenu">
-                            <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Для спальни</a></li>
-                            <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Для кухни</a></li>
-                            <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Для ванной</a></li>
-                            <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Для детской</a></li>
-                            <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Домашняя одежда</a></li>
-                            <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Детский мир</a></li>
-                            <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Домашний уют</a></li>
-                            <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Нижнее белье</a></li>
-                            <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Для отдыха</a></li>
-                            <li class="mobileMenuItem">
-                                <a href="#" class="mobileMenuLink">Для гостиниц</a>
-                                <ul class="dl-submenu">
-                                    <li><a href="#">Engagement Rings</a></li>
-                                    <li><a href="#">Bridal Sets</a></li>
-                                    <li><a href="#">Women's Wedding Bands</a></li>
-                                    <li><a href="#">Men's Wedding Bands</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-
-        </div>
-        <!--END mobile-menu-->
-
         <!--START header-top-->
         <div class="wrapHeaderTop">
             <div class="container">
+
+                <!--START mobile-menu-->
+                <div class="wrapMobileMenu hidden-md hidden-lg">
+                    <nav id="dl-menu" class="dl-menuwrapper mobileMenu">
+                        <button class="dl-trigger">Open Menu</button>
+                        <ul class="dl-menu">
+                            <li class="mobileMenuItem">
+                                <a href="#" class="mobileMenuLink">О магазине</a>
+                            </li>
+                            <li class="mobileMenuItem">
+                                <a href="#" class="mobileMenuLink">Бренды</a>
+                            </li>
+                            <li class="mobileMenuItem">
+                                <a href="#" class="mobileMenuLink">Как сдалать заказ</a>
+                            </li>
+                            <li class="mobileMenuItem">
+                                <a href="#" class="mobileMenuLink">Доставка</a>
+                            </li>
+                            <li class="mobileMenuItem">
+                                <a href="#" class="mobileMenuLink">Оплата</a>
+                            </li>
+                            <li class="mobileMenuItem">
+                                <a href="#" class="mobileMenuLink">Дисконтная система</a>
+                            </li>
+                            <li class="mobileMenuItem">
+                                <a href="#" class="mobileMenuLink">Статьи</a>
+                            </li>
+                            <li class="mobileMenuItem">
+                                <a href="#" class="mobileMenuLink">Контакты</a>
+                            </li>
+                            <li class="mobileMenuItem">
+                                <a href="#" class="mobileMenuLink">Категории</a>
+                                <ul class="dl-submenu">
+                                    <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Для спальни</a></li>
+                                    <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Для кухни</a></li>
+                                    <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Для ванной</a></li>
+                                    <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Для детской</a></li>
+                                    <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Домашняя одежда</a></li>
+                                    <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Детский мир</a></li>
+                                    <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Домашний уют</a></li>
+                                    <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Нижнее белье</a></li>
+                                    <li class="mobileMenuItem"><a href="#" class="mobileMenuLink">Для отдыха</a></li>
+                                    <li class="mobileMenuItem">
+                                        <a href="#" class="mobileMenuLink">Для гостиниц</a>
+                                        <ul class="dl-submenu">
+                                            <li><a href="#">Engagement Rings</a></li>
+                                            <li><a href="#">Bridal Sets</a></li>
+                                            <li><a href="#">Women's Wedding Bands</a></li>
+                                            <li><a href="#">Men's Wedding Bands</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+
+                </div>
+                <!--END mobile-menu-->
+
                 <div class="headerTop">
                     <div class="row">
-                        <div class="col-md-10">
+                        <div class="col-md-10 hidden-xs hidden-sm">
                             <nav class="topMenu">
                                 <ul class="topMenuList">
                                     <li class="topMenuItem"><a class="topMenuLink" href="#">О магазине</a></li>
@@ -96,7 +97,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-xs-4 col-md-2 pull-right">
                             <div class="enterToSite">
                                 <a class="logIn">
                                     <span class="icon-enter"></span>
@@ -117,7 +118,7 @@
             <div class="container">
                 <div class="headerMiddle">
                     <div class="row">
-                        <div class="col-sm-3">
+                        <div class="col-sm-4 col-md-3">
                             <div class="headerMiddleContentLeft">
                                 <div class="middleContact">
                                     <div class="middleContactIcon">
@@ -138,7 +139,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-9">
+                        <div class="col-sm-8 col-md-9">
                             <div class="headerMiddleContentRight">
                                 <div class="row">
 
@@ -178,6 +179,57 @@
                                             </span>
                                         </div>
                                     </form>
+                                    <div class="headerSearchResult">
+                                        <div class="closeIcon">
+                                            <span class="icon-close"></span>
+                                        </div>
+                                        <a class="searchResult" href="">
+                                            <div class="wrapSearchResultImage">
+                                                <img class="searchResultImage" src="image/searchResult.png" alt=""/>
+                                            </div>
+                                            <div class="searchResultImageInfo">
+                                                <div class="resultImageInfoTitle">Постельное белье Zastelli Дисней полуторный София  и ее друзья</div>
+                                                <div class="resultImageInfoArticle">Артикул: 25486</div>
+                                                <div class="resultImageInfoPrice">2 184 грн</div>
+                                            </div>
+                                        </a>
+                                        <a class="searchResult" href="">
+                                            <div class="wrapSearchResultImage">
+                                                <img class="searchResultImage" src="image/searchResult.png" alt=""/>
+                                            </div>
+                                            <div class="searchResultImageInfo">
+                                                <div class="resultImageInfoTitle">Постельное белье Zastelli Дисней полуторный София  и ее друзья</div>
+                                                <div class="resultImageInfoArticle">Артикул: 25486</div>
+                                                <div class="resultImageInfoPrice">2 184 грн</div>
+                                            </div>
+                                        </a>
+                                        <a class="searchResult" href="">
+                                            <div class="wrapSearchResultImage">
+                                                <img class="searchResultImage" src="image/searchResult.png" alt=""/>
+                                            </div>
+                                            <div class="searchResultImageInfo">
+                                                <div class="resultImageInfoTitle">Постельное белье Zastelli Дисней полуторный София  и ее друзья</div>
+                                                <div class="resultImageInfoArticle">Артикул: 25486</div>
+                                                <div class="resultImageInfoPrice">2 184 грн</div>
+                                            </div>
+                                        </a>
+                                        <a class="searchResult" href="">
+                                            <div class="wrapSearchResultImage">
+                                                <img class="searchResultImage" src="image/searchResult.png" alt=""/>
+                                            </div>
+                                            <div class="searchResultImageInfo">
+                                                <div class="resultImageInfoTitle">Постельное белье Zastelli Дисней полуторный София  и ее друзья</div>
+                                                <div class="resultImageInfoArticle">Артикул: 25486</div>
+                                                <div class="resultImageInfoPrice">2 184 грн</div>
+                                            </div>
+                                        </a>
+                                        <div class="wrapSearchResultBtn">
+                                            <a class="searchResultBtn">
+                                                <span class="resultBtn">Все результаты поиска</span>
+                                                <span class="icon-next"></span>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -189,7 +241,7 @@
 
         <!--START header-bottom-->
         <div class="wrapHeaderBottom">
-            <div class="container">
+            <div class="container hidden-sm hidden-xs">
                 <div class="headerBottom">
                     <ul class="headerCategoryList">
                         <li class="headerCategoryItem headerCategoryItem1">
@@ -795,7 +847,27 @@
             <!--END breadcrumb-->
 
             <div class="homePageSlider">
-                <img src="" alt=""/>
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="image/slider.jpg" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="image/slider.jpg" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="image/slider.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                    </a>
+                </div>
             </div>
         </div>
         <!--END slider-->
@@ -803,9 +875,17 @@
         <!--START banners-->
         <div class="container">
             <div class="banners">
-                <div class="banner banner1"><img src="" alt=""/></div>
-                <div class="banner banner2"><img src="" alt=""/></div>
-                <div class="banner banner3"><img src="" alt=""/></div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-4">
+                        <a class="banner banner1"><img src="image/discont.jpg" alt=""/></a>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <a class="banner banner2"><img src="image/delivery.jpg" alt=""/></a>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <a class="banner banner3"><img src="image/easyPayment.jpg" alt=""/></a>
+                    </div>
+                </div>
             </div>
         </div>
         <!--END banners-->
