--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -144,14 +144,14 @@
                                 <div class="row">
 
                                     <div class="middleContentRightTop">
-                                        <div class="col-sm-7">
+                                        <div class="col-xs-5 col-sm-6 col-md-7">
                                             <div class="headerLogo">
                                                 <a href="#" class="headerLogoLink">
                                                     <img class="headerLogoImage" src="image/Logo.png" alt="Постелька"/>
                                                 </a>
                                             </div>
                                         </div>
-                                        <div class="col-sm-5">
+                                        <div class="col-xs-7 col-sm-6 col-md-5">
                                             <div class="headerInfoBlock">
                                                 <div class="headerInfoUser">
                                                     <p class="headerUser">Добро пожаловать, <a href="" class="headerUserLink">Гость</a></p>
@@ -161,7 +161,7 @@
                                                         <span class="icon-bag"></span>
                                                     </div>
                                                     <div class="infoCart">
-                                                        <p class="infoCartTitle">Корзина</p>
+                                                        <a class="infoCartTitleLink" href="">Корзина</a>
                                                         <p class="infoCartProduct infoCart">товаров: <span class="infoCartProductNumber infoCartNumber">2</span> </p>
                                                         <p class="infoCartSum infoCart">на сумму: <span class="infoCartSumNumber infoCartNumber">3 685 грн</span></p>
                                                     </div>
