Added 'Novelty block' and 'News block'.

--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -1335,7 +1335,7 @@
             <!--END breadcrumb-->
 
             <div class="homePageSlider">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <div id="carousel" class="carousel slide" data-ride="carousel">
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
@@ -1387,9 +1387,7 @@
 
             <div class="container">
                 <div class="row">
-                    <!-- Carousel
-                    ================================================== -->
-                    <div id="myCarousel" class="carousel slide">
+                    <div id="carouselOffers" class="carousel slide">
                        <div class="wrapOfferCarousel">
                            <div class="carousel-inner">
                                 <div class="item active">
@@ -1505,8 +1503,8 @@
                         <a class="right carousel-control" href="#myCarousel" data-slide="next">
                             <span class="icon-next-slim"></span>
                         </a>
-                    </div><!-- End Carousel -->
-                </div><!-- End Well -->
+                    </div>
+                </div>
             </div>
 
             <div class="container">
@@ -1527,14 +1525,48 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="novaSingle">
                             <div class="novaSingleImage">
-                                <img class="novaImage" src="" alt=""/>
-                                <span class="novaPrice">2350 грн</span>
+                                <img class="novaImage" src="image/novelty1.jpg" alt=""/>
+                                <span class="novaPrice">2 350 грн</span>
                             </div>
                             <div class="novaSingleInfo">
-                                <h3 class="novaSingleTitle">
-                                    Двухцветное постельное белье Wonderful
-                                </h3>
-                                <div class="novaSingleBtn">В корзину</div>
+                                <a class="novaSingleTitlLink" href="">Двухцветное постельное белье Wonderful</a>
+                                <button class="cartBtn">В корзину</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="novaSingle">
+                            <div class="novaSingleImage">
+                                <img class="novaImage" src="image/novelty2.jpg" alt=""/>
+                                <span class="novaPrice">1 130 грн</span>
+                            </div>
+                            <div class="novaSingleInfo">
+                                <a class="novaSingleTitlLink" href="">Двухцветное постельное белье Wonderful</a>
+                                <button class="cartBtn">В корзину</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="novaSingle">
+                            <div class="novaSingleImage">
+                                <img class="novaImage" src="image/novelty3.jpg" alt=""/>
+                                <span class="novaPrice">3 200 грн</span>
+                            </div>
+                            <div class="novaSingleInfo">
+                                <a class="novaSingleTitlLink" href="">Двухцветное постельное белье Wonderful</a>
+                                <button class="cartBtn">В корзину</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="novaSingle">
+                            <div class="novaSingleImage">
+                                <img class="novaImage" src="image/novelty4.jpg" alt=""/>
+                                <span class="novaPrice">800 грн</span>
+                            </div>
+                            <div class="novaSingleInfo">
+                                <a class="novaSingleTitlLink" href="">Двухцветное постельное белье Wonderful</a>
+                                <button class="cartBtn">В корзину</button>
                             </div>
                         </div>
                     </div>
@@ -1552,11 +1584,36 @@
                         <div class="col-xs-12 col-sm-4">
                             <div class="newsSingle">
                                 <div class="newsSingleImage">
-                                    <img class="newsImage" src="" alt=""/>
+                                    <img class="newsImage" src="image/news1.jpg" alt=""/>
                                 </div>
                                 <div class="newsSingleInfo">
                                     <div class="newsInfoDate">23. 04.2015</div>
-                                    <h3 class="newsInfoTitle">Внимание</h3>
+                                    <a class="newsInfoTitleLink" href="">ВНИМАНИЕ</a>
+                                    <div class="newsInfoText">Обновляем весенне-летний гардероб маленьким модникам и модницам с новинками от Тм Gloria Jeans!</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-4">
+                            <div class="newsSingle">
+                                <div class="newsSingleImage">
+                                    <img class="newsImage" src="image/news2.jpg" alt=""/>
+                                </div>
+                                <div class="newsSingleInfo">
+                                    <div class="newsInfoDate">23. 04.2015</div>
+                                    <a class="newsInfoTitleLink" href="">Новинки детского
+                                        белья от Тм KidsDreams.</a>
+                                    <div class="newsInfoText">НОВИНКИ детского белья от Тм KidsDreams.</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-4">
+                            <div class="newsSingle">
+                                <div class="newsSingleImage">
+                                    <img class="newsImage" src="image/news3.jpg" alt=""/>
+                                </div>
+                                <div class="newsSingleInfo">
+                                    <div class="newsInfoDate">23. 04.2015</div>
+                                    <a class="newsInfoTitleLink" href="">ПОЗДРАВЛЯЕМ</a>
                                     <div class="newsInfoText">Обновляем весенне-летний гардероб маленьким модникам и модницам с новинками от Тм Gloria Jeans!</div>
                                 </div>
                             </div>
