--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -1352,9 +1352,9 @@
 
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel" data-slide-to="1"></li>
+                        <li data-target="#carousel" data-slide-to="2"></li>
                     </ol>
                 </div>
             </div>
@@ -1497,10 +1497,10 @@
                                </div>
                            </div>
                         </div>
-                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <a class="left carousel-control" href="#carouselOffers" data-slide="prev">
                             <span class="icon-previous-slim"></span>
                         </a>
-                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <a class="right carousel-control" href="#carouselOffers" data-slide="next">
                             <span class="icon-next-slim"></span>
                         </a>
                     </div>
@@ -1584,7 +1584,9 @@
                         <div class="col-xs-12 col-sm-4">
                             <div class="newsSingle">
                                 <div class="newsSingleImage">
-                                    <img class="newsImage" src="image/news1.jpg" alt=""/>
+                                    <a class="newsImageLink" href="">
+                                        <img class="newsImage" src="image/news1.jpg" alt=""/>
+                                    </a>
                                 </div>
                                 <div class="newsSingleInfo">
                                     <div class="newsInfoDate">23. 04.2015</div>
@@ -1596,25 +1598,28 @@
                         <div class="col-xs-12 col-sm-4">
                             <div class="newsSingle">
                                 <div class="newsSingleImage">
-                                    <img class="newsImage" src="image/news2.jpg" alt=""/>
+                                    <a class="newsImageLink" href="">
+                                        <img class="newsImage" src="image/news2.jpg" alt=""/>
+                                    </a>
                                 </div>
                                 <div class="newsSingleInfo">
                                     <div class="newsInfoDate">23. 04.2015</div>
-                                    <a class="newsInfoTitleLink" href="">Новинки детского
-                                        белья от Тм KidsDreams.</a>
-                                    <div class="newsInfoText">НОВИНКИ детского белья от Тм KidsDreams.</div>
+                                    <a class="newsInfoTitleLink" href="">Новинки детского белья от Тм KidsDreams.</a>
+                                    <div class="newsInfoText">Кожа ребенка очень чувствительна к воздействию</div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-4">
                             <div class="newsSingle">
                                 <div class="newsSingleImage">
-                                    <img class="newsImage" src="image/news3.jpg" alt=""/>
+                                    <a class="newsImageLink" href="">
+                                        <img class="newsImage" src="image/news3.jpg" alt=""/>
+                                    </a>
                                 </div>
                                 <div class="newsSingleInfo">
                                     <div class="newsInfoDate">23. 04.2015</div>
                                     <a class="newsInfoTitleLink" href="">ПОЗДРАВЛЯЕМ</a>
-                                    <div class="newsInfoText">Обновляем весенне-летний гардероб маленьким модникам и модницам с новинками от Тм Gloria Jeans!</div>
+                                    <div class="newsInfoText">В разгар весны и с приближени лета, обновляем гардероб - новинки для всей семьи от Тм Senti!</div>
                                 </div>
                             </div>
                         </div>
@@ -1628,33 +1633,35 @@
 
     <!--START footer-->
     <footer class="mainFooter">
-        <div class="footer">
-            <div class="container">
+        <div class="container">
+            <div class="footer">
                 <div class="row">
                     <!--START footer-left-->
                     <div class="col-xs-12 col-sm-4">
                         <div class="footerLeft">
-                            <div class="footerLeftTitle">
-                                Приём заказов
-                                <span class="icon-phone"></span>
-                            </div>
-                            <div class="footerLeftPhones">
-                                <a class="footerLeftPhone" href="tel:+380977056215">
-                                    (097)705-62-15
-                                </a>
-                                <a class="footerLeftPhone" href="tel:+380666198107">
-                                    (066)619-81-07
-                                </a>
-                                <a class="footerLeftPhone" href="tel:+380636497042">
-                                    (063)649-70-42
-                                </a>
-                                <div class="footerLeftSchedule">
-                                    ежедневно  с 10:00 - 19:00
+                            <div class="footerLeftInfo">
+                                <div class="footerLeftTitle">
+                                    Приём заказов
+                                    <span class="icon-phone"></span>
                                 </div>
-                            </div>
-                            <div class="footerLeftMail">
-                                <a class="footerLeftMailLink" href="mailto:postelkaa@gmail.com">postelkaa@gmail.com</a>
-                                <span class="icon-letter"></span>
+                                <div class="footerLeftPhones">
+                                    <a class="footerLeftPhone" href="tel:+380977056215">
+                                        (097)705-62-15
+                                    </a>
+                                    <a class="footerLeftPhone" href="tel:+380666198107">
+                                        (066)619-81-07
+                                    </a>
+                                    <a class="footerLeftPhone" href="tel:+380636497042">
+                                        (063)649-70-42
+                                    </a>
+                                    <div class="footerLeftSchedule">
+                                        ежедневно  с 10:00 - 19:00
+                                    </div>
+                                </div>
+                                <div class="footerLeftMail">
+                                    <a class="footerLeftMailLink" href="mailto:postelkaa@gmail.com">postelkaa@gmail.com</a>
+                                    <span class="icon-letter"></span>
+                                </div>
                             </div>
                             <div class="feedback">
                                 <button class="feedbackBtn">Обратный звонок</button>
@@ -1681,17 +1688,17 @@
                                 </li>
                             </ul>
                             <div class="footerMiddleFinances">
-                                <a class="footerMiddleFinancesLink">
-                                    <img src="" alt=""/>
+                                <a class="footerMiddleFinancesLink" href="">
+                                    <img src="image/icon-visa.png" alt=""/>
                                 </a>
-                                <a class="footerMiddleFinancesLink">
-                                    <img src="" alt=""/>
+                                <a class="footerMiddleFinancesLink" href="">
+                                    <img src="image/icon-privat.png" alt=""/>
                                 </a>
-                                <a class="footerMiddleFinancesLink">
-                                    <img src="" alt=""/>
+                                <a class="footerMiddleFinancesLink" href="">
+                                    <img src="image/icon-masterCard.png" alt=""/>
                                 </a>
-                                <a class="footerMiddleFinancesLink">
-                                    <img src="" alt=""/>
+                                <a class="footerMiddleFinancesLink" href="">
+                                    <img src="image/icon-online.png" alt=""/>
                                 </a>
                             </div>
                         </div>
@@ -1733,7 +1740,7 @@
                             </div>
                             <div class="footerRightChat">
                                 <span class="icon-chat"></span>
-                                <div class="footerRightChatBtn">On-line чат</div>
+                                <button class="footerRightChatBtn">On-line чат</button>
                             </div>
                             <div class="footerRightSubscribe">
                                 <div class="footerRightSubscribeTitle">Подписка на новости</div>
